############################################################
EFA Version 3.0.0.8 Changes
############################################################

Issue #132 Enhancement  - Increase sa-learn and spamassassin max message size limits
Issue #157 Bug          - Razor failing after registration of service
Issue #156 Bug          - GeoIP Bug Fix
Issue #158 Enhancement  - Sort transport domain list in EFA-Configure
Issue #161 Enhancement  - Increase MailScanner thread limit in EFA-Configure

############################################################
EFA Version 3.0.0.7 Changes
############################################################

Issue #30  Enhancement  - Filter out nonspam in quarantine reports (regression fix)
Issue #82  Enhancement  - re2c spamassassin rule complilation support
Issue #128 Enhancement  - Adjust Treat Invalid Watermarks With No Sender as Spam
Issue #133 Enhancement  - Upgrade spamassassin to 3.4.0
Issue #136 Enhancement  - Disable Notify Senders by default in MailScanner
Issue #139 Bug          - SSLv3 POODLE Vulnerability
Issue #138 Enhancement  - Maximum Processing Attempts Database Adjustments
Issue #141 Enhancement  - Exclude Whitelisted Emails from Report as Spam Link
Issue #145 Bug          - Modify Domain TLD Constraint
Issue #147 Bug          - Message Learn/Release Rejecting 8 digit ID prefix
Issue #149 Bug          - Disable SSL in Postfix (POODLE)
Issue #151 Bug          - Fix for issue #141 for inbound whitelisted emails only
Issue #152 Bug          - Fix for Issue #136 fix
Issue #153 Bug          - Reply signature behavior not functional
Issue #154 Bug          - Fix Razor typos in build.bash
Issue #155 Bug          - GHOST Vulnerability (glibc)

############################################################
EFA Version 3.0.0.6 Changes
############################################################

Issue #127  Bug			- Greylisting not toggling on 3.0.0.5
Issue #129	Enhancement	- Increase max spam check size to 2 MB