@@ -2,6 +2,7 @@
 EFA Version 3.0.0.8 Changes
 ############################################################
 
+Issue #45  Enhancement  - Add ScamNailer ClamAV ruleset
 Issue #132 Enhancement  - Increase sa-learn and spamassassin max message size limits
 Issue #157 Bug          - Razor failing after registration of service
 Issue #156 Bug          - GeoIP Bug Fix
